# cat-command

golang/: go.mod  main.go
python/: main.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs  main.rs
rust/tests/: cli.rs
typescript/: package.json
typescript/src/: main.ts
