[package]
name = "catr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
